--- a/quickshell/translations/template.json
+++ b/quickshell/translations/template.json
@@ -2345,6 +2345,13 @@
     "comment": ""
   },
   {
+    "term": "Darken Modal Background",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
     "term": "Date Format",
     "translation": "",
     "context": "",
@@ -5320,6 +5327,13 @@
     "comment": ""
   },
   {
+    "term": "Niri Layout Overrides",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
     "term": "Niri compositor actions (focus, move, etc.)",
     "translation": "",
     "context": "",
@@ -5607,7 +5621,7 @@
     "comment": ""
   },
   {
-    "term": "Note: this only changes the displayed percentage, it does not actually limit charging.",
+    "term": "Note: this only changes the percentage, it does not actually limit charging.",
     "translation": "",
     "context": "",
     "reference": "",
@@ -5867,6 +5881,20 @@
   },
   {
     "term": "Override",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
+    "term": "Override Corner Radius",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
+    "term": "Override Gaps",
     "translation": "",
     "context": "",
     "reference": "",
@@ -6713,6 +6741,13 @@
     "comment": ""
   },
   {
+    "term": "Rounded corners for windows",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
     "term": "Run DMS Templates",
     "translation": "",
     "context": "",
@@ -7462,6 +7497,13 @@
     "comment": ""
   },
   {
+    "term": "Show darkened overlay behind modal dialogs",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
     "term": "Show launcher overlay when typing in Niri overview. Disable to use another launcher.",
     "translation": "",
     "context": "",
@@ -7470,6 +7512,13 @@
   },
   {
     "term": "Show on Last Display",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
+    "term": "Show on Overlay",
     "translation": "",
     "context": "",
     "reference": "",
@@ -7701,6 +7750,13 @@
   },
   {
     "term": "Sounds",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
+    "term": "Space between windows",
     "translation": "",
     "context": "",
     "reference": "",
@@ -8568,6 +8624,20 @@
     "comment": ""
   },
   {
+    "term": "Use custom gaps instead of bar spacing",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
+    "term": "Use custom window radius instead of theme radius",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
     "term": "Use fingerprint reader for lock screen authentication (requires enrolled fingerprints)",
     "translation": "",
     "context": "",
@@ -9045,6 +9115,20 @@
   },
   {
     "term": "Wind Speed",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
+    "term": "Window Corner Radius",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
+    "term": "Window Gaps",
     "translation": "",
     "context": "",
     "reference": "",
